# pyduc

./: .gitignore  README.md  pyduc.py  pyproject.toml  run.py
pyduc/: __init__.py  cli.py  pyduc.py
src/pyduc/: __init__.py  cli.py  config.py  pyduc.py  util.py
